apps/radarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
  - port: 7878
    protocol: TCP
    targetPort: 7878
    name: webui
  selector:
    run: radarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: radarr
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      run: radarr
  template:
    metadata:
      labels:
        run: radarr
    spec:
      securityContext:
        # runAsUser: 1000
        # runAsGroup: 1000
        fsGroup: 1000
      containers:
      - env:
        - name: TZ
          value: America/Los_Angeles
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        image: linuxserver/radarr
        name: radarr
        ports:
        - containerPort: 7878
          name: webui
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl "http://localhost:7878/radarr/api/health?ApiKey=$(sed -ne '/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}' </config/config.xml)"
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl "http://localhost:7878/radarr/api/system/status?ApiKey=$(sed -ne '/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}' </config/config.xml)"
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts: 
        - mountPath: /config 
          name: nzb
          subPath: radarr
        - mountPath: /movies 
          name: nzb
          subPath: media/movies
        - mountPath: /downloads 
          name: nzb
          subPath: downloads
