apps/sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
  - port: 8989
    protocol: TCP
    targetPort: 8989
    name: webui
  selector:
    run: sonarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: sonarr
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      run: sonarr
  template:
    metadata:
      labels:
        run: sonarr
    spec:
      securityContext:
        # runAsUser: 1000
        # runAsGroup: 1000
        fsGroup: 1000    
      containers:
      - env:
        - name: TZ
          value: America/Los_Angeles
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        image: linuxserver/sonarr
        name: sonarr
        ports:
        - containerPort: 8989
          name: webui
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl "http://localhost:8989/sonarr/api/health?ApiKey=$(sed -ne '/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}' </config/config.xml)"
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl "http://localhost:8989/sonarr/api/system/status?ApiKey=$(sed -ne '/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}' </config/config.xml)"
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts: 
        - mountPath: /config 
          name: nzb
          subPath: sonarr
        - mountPath: /tv 
          name: nzb
          subPath: media/tv
        - mountPath: /downloads 
          name: nzb
          subPath: downloads
